Fixed alignment of github/portfolio link

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -66,7 +66,7 @@ ul {
       display: flex;
 
       i {
-        padding-right: 1rem;
+        padding: 0 1rem;
         color: $light-color;
       }
 
